--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
 <div style="text-align:center">
-  <h1>
-    {{ title }}
-  </h1>
+  <app-navbar></app-navbar>
   <router-outlet></router-outlet>
+</div>
