--- a/src/app/createaccount/createaccount.component.html
+++ b/src/app/createaccount/createaccount.component.html
@@ -1,59 +1,18 @@
 <h1>Create Account</h1>
-
-
-<style>
-input[type=text], select {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-}
-
-input[type=submit] {
-    width: 100%;
-    background-color: #4CAF50;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-input[type=submit]:hover {
-    background-color: #45a049;
-}
-
-div {
-    border-radius: 5px;
-    background-color: #f2f2f2;
-    padding: 20px;
-    width= 70%;
-}
-</style>
-<body>
-
-
-
 <div>
-  <form action="/action_page.php">
-    <label for="name">Name</label>
-    <input type="text" id="name" name="firstname" placeholder="First Name Last Name">
+    <form>
+        <label for="name">Name</label>
+        <input type="text" id="name" name="firstname" placeholder="First Name Last Name">
+        
+        <label for="email">Email</label>
+        <input type="text" id="email" name="email" placeholder="example@wisc.edu">
+        
+        <label for="password">Password</label>
+        <input type="text" id="password" name="password" placeholder="">
+        
+        <label for="zipcode">Zip Code</label>
+        <input type="text" id="zipcode" name="zipcode" placeholder="00000">
     
-    <label for="email">Email</label>
-    <input type="text" id="email" name="email" placeholder="example@wisc.edu">
-    
-    <label for="password">Password</label>
-    <input type="text" id="password" name="password" placeholder="">
-    
-    <label for="zipcode">Zip Code</label>
-    <input type="text" id="zipcode" name="zipcode" placeholder="00000">
-  
-    <input type="submit" value="Create Account">
-  </form>
+        <input type="submit" value="Create Account">
+    </form>
 </div>
-
-</body>
