--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,51 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head>
-<style>
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
-    position: fixed;
-    top: 0;
-    width: 98%;
-}
-
-li {
-    float: left;
-}
-
-li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
-li a:hover {
-    background-color: #111;
-}
-
-input[type=text] {
-    
-    float: left;
-    padding: 14px 16px;
-    font-size: 14px
-   
-}
-</style>
-</head>
-<body>
-
-<ul>
-  <li><a routerLink="/">Voluntrain</a></li>
-  <li><input type="text" placeholder="Search..."></li>
-  <li style="float:right"><a routerLink="/createaccount">Sign Up</a></li>
-  <li style="float:right"><a routerLink="/signin">Sign In</a></li>
-</ul>
-
-</body>
-</html>
+<div style="margin-bottom: 80px">
+    <ul>
+    <li><a routerLink="/">Voluntrain</a></li>
+    <li><input type="text" placeholder="Search..."></li>
+    <li style="float:right"><a routerLink="/createaccount">Sign Up</a></li>
+    <li style="float:right"><a routerLink="/user-login-form">Sign In</a></li>
+    </ul>
+</div>
