--- a/src/app/user-login-form/user-login-form.component.html
+++ b/src/app/user-login-form/user-login-form.component.html
@@ -2,7 +2,7 @@
   <h2>Login</h2>
   <form
    [formGroup]="loginForm"
-   (ngSubmit)="onSubmit()">
+   (ngSubmit)="submit()">
 
     <div class = "form-control">
       <label for = "username">Username: </label>
@@ -14,7 +14,7 @@
       <input type="password" class="form-group" id="password" formControlName="password">
     </div>
 
-    <button type="submit" [disabled]="!form.valid" class="btn btn-success">Login</button>
+    <button type="submit" class="btn btn-success">Login</button>
 
   </form>
 
