--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -4,5 +4,7 @@
     <li><input type="text" placeholder="Search..."></li>
     <li style="float:right"><a routerLink="/createaccount">Sign Up</a></li>
     <li style="float:right"><a routerLink="/user-login-form">Sign In</a></li>
+    <li style="float:right"><a routerLink="/">Sign Out</a></li>
+    
     </ul>
 </div>
