--- a/src/app/user-login-form/user-login-form.component.html
+++ b/src/app/user-login-form/user-login-form.component.html
@@ -5,8 +5,8 @@
    (ngSubmit)="submit()">
 
     <div class = "form-control">
-      <label for = "username">Username: </label>
-      <input type = "text" class = "form-group" id = "username" required formControlName="username">
+      <label for="email">Email: </label>
+      <input type="text" class="form-group" id ="email" required formControlName="email">
     </div>
 
     <div class = "form-control">
