Added Org Form component and adjusted routing modules for nav-bar

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -3,8 +3,9 @@
     <li><a routerLink="/">Voluntrain</a></li>
     <li><input type="text" placeholder="Search..."></li>
     <li style="float:right"><a routerLink="/createaccount">Sign Up</a></li>
+    <li style="float:right"><a routerLink="/org-form">Create an Org</a></li>
     <li style="float:right"><a routerLink="/user-login-form">Sign In</a></li>
     <li style="float:right"><a routerLink="/">Sign Out</a></li>
-    
+
     </ul>
 </div>
