--- a/src/app/org-form/org-form.component.html
+++ b/src/app/org-form/org-form.component.html
@@ -1,27 +1,29 @@
-<div class = "container">
+<div class = "form-group">
   <h1>Create an Organization</h1>
-  <form>
+  <form
+    [formGroup]="orgForm"
+    (ngSubmit)="submit()">
 
-    <div class = "form-group">
-      <label for = "name">Org Name: </label> 
-      <input type = "text" class = "form-group" id = "name" required>
+    <div class = "form-control">
+      <label for = "name">Org Name: </label>
+      <input type = "text" class = "form-group" id = "name" required formControlName="orgName">
     </div>
 
-    <div class = "form-group">
-      <label for="location">Address: </label> 
-      <input type="text" id="location" required>
+    <div class = "form-control">
+      <label for="location">Address: </label>
+      <input type="text" class = "form-group" id="location" required formControlName="address">
     </div>
 
-    <div class = "form-group">
-      <label for="zipcode">Zipcode: </label> 
-      <input type="text" id="zipcode" required>
+    <div class = "form-control">
+      <label for="zipcode">Zipcode: </label>
+      <input type="text" class = "form-group" id="zipcode" required formControlName="zipcode">
     </div>
 
-    <div class = "form-group">
-        <label for="bio">Description/Bio: </label> 
-        <textarea rows="4" cols="50" name="comment" form="usrform"></textarea> 
+    <div class = "form-control">
+        <label for="bio">Description/Bio: </label>
+        <textarea rows="4" class = "form-group" cols="50" name="comment" form="usrform" formControlName="bio"></textarea>
     </div>
-    <button type="submit" [disabled]="!form.valid" class="btn btn-success">Submit</button>
+    <button type="submit" class="btn btn-success">Submit</button>
 
   </form>
 </div>
