Added create organization server code

--- a/src/app/createaccount/createaccount.component.html
+++ b/src/app/createaccount/createaccount.component.html
@@ -16,7 +16,7 @@
         
         <div class = "form-control">
             <label for="password">Password</label>
-            <input type="text" class = "form-group" id="password" name="password" placeholder="" required formControlName="password">
+            <input type="password" class = "form-group" id="password" name="password" placeholder="" required formControlName="password">
         </div>
         
         <div class = "form-control">
