--- a/src/app/org-form/org-form.component.html
+++ b/src/app/org-form/org-form.component.html
@@ -1,27 +1,29 @@
 <div class = "container">
   <h1>Create an Organization</h1>
-  <form>
+  <form 
+    [formGroup]="orgform"
+    (ngSubmit)="submit()">
 
     <div class = "form-group">
-      <label for = "name">Org Name: </label> 
-      <input type = "text" class = "form-group" id = "name" required>
+      <label for="name">Org Name: </label> 
+      <input type="text" class="form-group" id="name" required formControlName="name">
     </div>
 
     <div class = "form-group">
       <label for="location">Address: </label> 
-      <input type="text" id="location" required>
+      <input type="text" id="location" required formControlName="location">
     </div>
 
     <div class = "form-group">
       <label for="zipcode">Zipcode: </label> 
-      <input type="text" id="zipcode" required>
+      <input type="text" id="zipcode" required formControlName="zipcode">
     </div>
 
     <div class = "form-group">
         <label for="bio">Description/Bio: </label> 
-        <textarea rows="4" cols="50" name="comment" form="usrform"></textarea> 
+        <textarea rows="4" cols="50" name="comment" form="usrform" formControlName="bio"></textarea> 
     </div>
-    <button type="submit" [disabled]="!form.valid" class="btn btn-success">Submit</button>
+    <button type="submit" class="btn btn-success">Submit</button>
 
   </form>
 </div>
