--- a/src/app/logout/logout.component.html
+++ b/src/app/logout/logout.component.html
@@ -1,8 +1,3 @@
-<div style="margin-bottom: 80px">
-  <ul>
-  <li><a routerLink="/">Voluntrain</a></li>
-  <li><input type="text" placeholder="Search..."></li>
-  <li style="float:right"><a routerLink="/">Sign Out</a></li>
- 
-  </ul>
-</div>
+<p>
+  Logging out...
+</p>
