--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,11 +1,12 @@
 <div style="margin-bottom: 80px">
     <ul>
-    <li><a routerLink="/">Voluntrain</a></li>
-    <li><input type="text" placeholder="Search..."></li>
-    <li style="float:right"><a routerLink="/createaccount">Sign Up</a></li>
-    <li style="float:right"><a routerLink="/org-form">Create an Org</a></li>
-    <li style="float:right"><a routerLink="/user-login-form">Sign In</a></li>
-    <li style="float:right"><a routerLink="/">Sign Out</a></li>
-
+    <li class = "icon"><a routerLink="/"><img src="https://i.imgur.com/pY7oNOa.png" alt="Voluntrain" width="119" height="45"></a></li>
+        
+    <li class="search"><input type="text" placeholder="Search..."></li>
+ 
+    <li class= "pagelink" ><a routerLink="/">Sign Out</a></li>
+    <li class= "pagelink" ><a routerLink="/user-login-form">Sign In</a></li>
+    <li class= "pagelink" ><a routerLink="/createaccount">Create Account</a></li>
+    <li class= "pagelink" ><a routerLink="/org-form">Create an Organization</a></li>
     </ul>
 </div>
