--- a/src/app/createaccount/createaccount.component.css
+++ b/src/app/createaccount/createaccount.component.css
@@ -18,6 +18,17 @@ input[type=password], select {
     box-sizing: border-box;
 }
 
+input[type=description], select {
+    width: 100%;
+    text-align: start;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
 input[type=submit] {
     width: 100%;
     background-color: #4CAF50;
