--- a/src/app/org-form/org-form.component.html
+++ b/src/app/org-form/org-form.component.html
@@ -23,6 +23,10 @@
         <label for="bio">Description/Bio: </label> 
         <textarea rows="4" cols="50" name="comment" form="usrform" formControlName="bio"></textarea> 
     </div>
+
+    <div>
+        Select images: <input type="file" name="img" multiple>
+    </div>
     <button type="submit" class="btn btn-success">Submit</button>
 
   </form>
