Finished server-side testing, modified server routes

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,5 +7,5 @@
 <div *ngIf="isLoggedIn">
   <p>Currently logged in user: {{ name }}</p>
   <p>Email: {{ email }}</p>
-  <p>Zipcode: {{ zip }}</p>
+  <p>Zipcode: {{ zipcode }}</p>
 </div>
