--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,17 +1,17 @@
 <div class = "container">
-  <h1>Login</h1>
+  <h1>Sign In</h1>
   <form>
 
     <div class = "form-group">
-      <label for = "username" placeholder="Username">Username: </label> 
+      <label for = "username" placeholder="Username">Username: </label>
       <input type = "text" class = "form-group" id = "username" required>
-      
+
     </div>
 
     <div class = "form-group">
       <label for="password" placeholder= "Password">Password: </label>
       <input type="password" value="" id="myInput" required>
-      
+
     </div>
 
     <button type="submit" [disabled]="!form.valid" class="btn btn-success">Login</button>
