--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,12 +1,12 @@
 <div style="margin-bottom: 80px">
     <ul>
     <li class = "icon"><a routerLink="/"><img src="https://i.imgur.com/pY7oNOa.png" alt="Voluntrain" width="119" height="45"></a></li>
-        
+
     <li class="search"><input type="text" placeholder="Search..."></li>
- 
+
     <li class= "pagelink" ><a routerLink="/">Sign Out</a></li>
-    <li class= "pagelink" ><a routerLink="/user-login-form">Sign In</a></li>
-    <li class= "pagelink" ><a routerLink="/createaccount">Create Account</a></li>
-    <li class= "pagelink" ><a routerLink="/org-form">Create an Organization</a></li>
+    <li class= "pagelink" ><a routerLink="/login">Log In</a></li>
+    <li class= "pagelink" ><a routerLink="/create-account">Create Account</a></li>
+    <li class= "pagelink" ><a routerLink="/create-org">Create an Organization</a></li>
     </ul>
 </div>
