Added test files for each component, edited server tests

--- a/src/app/createaccount/createaccount.component.html
+++ b/src/app/createaccount/createaccount.component.html
@@ -31,11 +31,11 @@
     
         <div class = "optional">
             <label for="interests">Interests</label>
-            <input type="text" class = "required" id="interests" name="interests" placeholder="Possible Interests" formControlName="zipcode">
+            <input type="text" class = "required" id="interests" name="interests" placeholder="Possible Interests" formControlName="interests">
         </div>
 
         <div>
-                <label for="fileupload"> Select a profile picture to upload</label>
+            <label for="fileupload"> Select a profile picture to upload</label>
             <input type="file" name="fileupload" value="fileupload" id="fileupload"> 
         </div>
 
