Added CSS content to org-form page to make it prettier

--- a/src/app/createaccount/createaccount.component.html
+++ b/src/app/createaccount/createaccount.component.html
@@ -26,12 +26,12 @@
 
         <div class = "optional">
             <label for="description">Description</label>
-            <textarea rows="4" cols="100" type="description" class = "required" id="description" name="description" placeholder="Optional description of yourself" formControlName="description"></textarea>
+            <input rows="4" cols="100" type="text" class = "optional" id="description" name="description" placeholder="Optional description of yourself" formControlName="description">
         </div>
     
         <div class = "optional">
             <label for="interests">Interests</label>
-            <input type="text" class = "required" id="interests" name="interests" placeholder="Possible Interests" formControlName="zipcode">
+            <input type="text" class = "required" id="optional" name="interests" placeholder="Possible Interests" formControlName="zipcode">
         </div>
 
         <div>
