--- a/src/app/org-form/org-form.component.css
+++ b/src/app/org-form/org-form.component.css
@@ -1,16 +1,26 @@
-h1 {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size:large;
-    text-align: start; 
-    font-style: unset;
+input[type=text], select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
 }
 
-form {
-    text-align: start;
-    font-size: large;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-style: unset;
-    padding-left: 10px;
+input[type=submit] {
+    width: 100%;
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+input[type=submit]:hover {
+    background-color: #45a049;
 }
 
 div {
@@ -18,4 +28,5 @@ div {
     background-color: #f2f2f2;
     padding: 20px;
     width: 70%;
- }
+    margin: 0 auto;
+}
