--- a/src/app/org-form/org-form.component.html
+++ b/src/app/org-form/org-form.component.html
@@ -4,30 +4,31 @@
     [formGroup]="orgform"
     (ngSubmit)="submit()">
 
-    <div class = "form-group">
+    <div class = "required">
       <label for="name">Org Name: </label> 
       <input type="text" class="form-group" id="name" required formControlName="name">
     </div>
 
-    <div class = "form-group">
+    <div class = "required">
       <label for="location">Address: </label> 
       <input type="text" id="location" required formControlName="location">
     </div>
 
-    <div class = "form-group">
+    <div class = "required">
       <label for="zipcode">Zipcode: </label> 
       <input type="text" id="zipcode" required formControlName="zipcode">
     </div>
 
-    <div class = "form-group">
+    <div class = "optional">
         <label for="bio">Description/Bio: </label> 
-        <textarea rows="4" cols="50" name="comment" form="usrform" formControlName="bio"></textarea> 
+        <textarea rows="4" cols= "95" name="comment" form="usrform" formControlName="bio"></textarea> 
     </div>
 
-    <div>
+    <div class = "optional">
         Select images: <input type="file" name="img" multiple>
     </div>
-    <button type="submit" class="btn btn-success">Submit</button>
+
+    <input type="submit" value="Create Organization">
 
   </form>
 </div>
