added google maps on view event page, browser asks to jus current location. also made nav bar transparent.

--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -3,10 +3,11 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
     position: fixed;
     top: 0;
     width: 98%;
+    z-index: 9999;
+    background: rgba(29, 28, 28, 0.76);
 }
 
 li {
