--- a/src/app/view-event/view-event.component.html
+++ b/src/app/view-event/view-event.component.html
@@ -1,8 +1,23 @@
+<h1>Event Name</h1>
 <label id="testid" mat-raised-button href="javascript:void(0);">view event</label>
 
+<h1>Organization </h1>
 <label id="testid2" mat-raised-button href="javascript:void(0);">Organization</label>
 
+<h1>Event Description</h1>
 <label id="demo" mat-raised-button href="javascript:void(0);">description box</label>
+
+
+<h1>Event Location</h1>
+<!-- this creates a google map on the page with the given lat/lng from -->
+<!-- the component as the initial center of the map: -->
+<div>
+<agm-map [latitude]="lat" [longitude]="lng" [zoom] = "zoom">
+  <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
+
+</agm-map>
+
+</div>
 
 <h1> Sign up</h1>
 
