--- a/src/app/createaccount/createaccount.component.css
+++ b/src/app/createaccount/createaccount.component.css
@@ -23,6 +23,25 @@ input[type=submit]:hover {
     background-color: #45a049;
 }
 
+button {
+  font-family: Arial;
+  background-color: #eee;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+button:hover {
+ background-color: #cfd8dc;
+}
+
+button:disabled {
+ background-color: #eee;
+ color: #ccc;
+ cursor: auto;
+}
+
 div {
     border-radius: 5px;
     background-color: #f2f2f2;
