--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,13 @@
 <h1>Welcome to Voluntrain!</h1>
 
+<!-- Load icon library -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<div style="background-color: grey; padding-bottom:10px" class="searchBar">
+  <input type="text" id="userSearch" placeholder="Search for volunteer events...">
+  <button type="submit"><i class="fa fa-search"></i></button>
+</div>
+
 <div *ngIf="!isLoggedIn">
   <p>No user is currently logged in.</p>
 </div>
