--- a/src/app/view-event/view-event.component.html
+++ b/src/app/view-event/view-event.component.html
@@ -8,6 +8,9 @@
 <label id="demo" mat-raised-button href="javascript:void(0);">description box</label>
 
 
+
+<button class="button" mat-button (click)="dialog.openDialog()">Join Event</button>
+
 <h1>Event Location</h1>
 <!-- this creates a google map on the page with the given lat/lng from -->
 <!-- the component as the initial center of the map: -->
@@ -17,24 +20,4 @@
 
 </agm-map>
 
-</div>
-
-<h1> Sign up</h1>
-
-<div>
-    <form>
-        <label for="name">name</label>
-        <input type="text" id="name" name="firstname" placeholder="First Name Last Name">
-        
-        <label for="email">Email</label>
-        <input type="text" id="email" name="email" placeholder="example@wisc.edu">
-        
-        <label for="password">Password</label>
-        <input type="text" id="password" name="password" placeholder="">
-        
-        <label for="zipcode">Zip Code</label>
-        <input type="text" id="zipcode" name="zipcode" placeholder="00000">
-    
-        <input type="submit" value="Sign up">
-    </form>
 </div>
