--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,6 +7,6 @@
     <li class="pagelink" *ngIf="isLoggedIn$ | async" style="float:right"><a routerLink="/logout">Sign Out</a></li>
     <li class="pagelink" *ngIf="!(isLoggedIn$ | async)" style="float:right"><a routerLink="/login">Log In</a></li>
     <li class="pagelink" *ngIf="!(isLoggedIn$ | async)" style="float:right"><a routerLink="/create-account">Create Account</a></li>
-    <li class="pagelink" style="float:right"><a routerLink="/create-org">Create an Organization</a></li>
+    <li class="pagelink" *ngIf="(isLoggedIn$ | async)" style="float:right"><a routerLink="/create-org">Create an Organization</a></li>
     </ul>
 </div>
