--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,6 @@
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+@import url( 'https://fonts.googleapis.com/css?family=Roboto:400,700|Material+Icons');
+
 /* You can add global styles to this file, and also import other style files */
 html {
     font-family: 'Roboto', sans-serif;
