--- a/src/app/createaccount/createaccount.component.css
+++ b/src/app/createaccount/createaccount.component.css
@@ -1,48 +1,10 @@
-input[type=text], select {
+input {
     width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
+    display: flex;
+  flex-direction: column;
+  
 }
 
-input[type=password], select {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-}
-
-input[type=description], select {
-    width: 100%;
-    text-align: start;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-}
-
-input[type=submit] {
-    width: 100%;
-    background-color: #4CAF50;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-input[type=submit]:hover {
-    background-color: #45a049;
-}
 
 button {
   font-family: Arial;
@@ -52,7 +14,9 @@ button {
   border-radius: 4px;
   cursor: pointer;
 }
-
+mat-form-field {
+    width: 100%;
+}
 button:hover {
  background-color: #cfd8dc;
 }
@@ -61,12 +25,12 @@ button:disabled {
  background-color: #eee;
  color: #ccc;
  cursor: auto;
+ 
 }
 
 div {
-    border-radius: 5px;
-    background-color: #f2f2f2;
-    padding: 20px;
+    border-radius: 2px;
+    background-color: white;
     width: 70%;
     margin: 0 auto;
 }
