--- a/src/app/createaccount/createaccount.component.html
+++ b/src/app/createaccount/createaccount.component.html
@@ -4,34 +4,46 @@
     [formGroup]="signupForm"
     (ngSubmit)="submit()">
 
-        <div class = "required">
-            <label for="name">Name</label>
-            <input type="text" class = "required" id="name" name="firstname" placeholder="First Name Last Name" required formControlName="name">
+        <div  class = "required">
+           <mat-form-field appearance = "outline">
+                <mat-label>Name</mat-label>
+                <input matInput type="text" class = "required" id="name" name="name" placeholder="First Name Last Name" required formControlName="name">
+            </mat-form-field>
         </div>
 
         <div class = "required">
-            <label for="email">Email</label>
-            <input type="text" class = "required" id="email" name="email" placeholder="example@wisc.edu" required formControlName="email">
+            <mat-form-field appearance = "outline">
+                <mat-label for="email">Email</mat-label>
+                <input matInput type="text" class = "required" id="email" name="email" placeholder="example@wisc.edu" required formControlName="email">
+            </mat-form-field>
         </div>
 
         <div class = "required">
-            <label for="password">Password</label>
-            <input type="password" class = "required" id="password" name="password" placeholder="" required formControlName="password">
+            <mat-form-field appearance = "outline">
+                <mat-label for="password">Password</mat-label>
+                <input matInput type="password" class = "required" id="password" name="password" placeholder="" required formControlName="password">
+            </mat-form-field>
         </div>
 
         <div class = "required">
-            <label for="zipcode">Zip Code</label>
-            <input type="text" class = "required" id="zipcode" name="zipcode" placeholder="00000" required formControlName="zipcode">
+            <mat-form-field appearance = "outline">
+                <mat-label for="zipcode">Zip Code</mat-label>
+                <input matInput type="text" class = "required" id="zipcode" name="zipcode" placeholder="00000" required formControlName="zipcode">
+            </mat-form-field>
         </div>
 
         <div class = "optional">
-            <label for="description">Description</label>
-            <input rows="4" cols="100" type="text" class = "optional" id="description" name="description" placeholder="Optional description of yourself" formControlName="description">
+            <mat-form-field appearance = "outline">
+                <mat-label for="description">Description</mat-label>
+                <textarea matInput  rows="4" cols="100" type="text" class = "optional" id="description" name="description" placeholder="Optional description of yourself" formControlName="description"></textarea>
+            </mat-form-field>
         </div>
 
         <div class = "optional">
-            <label for="interests">Interests</label>
-            <input type="text" class = "required" id="interests" name="interests" placeholder="Possible Interests" formControlName="interests">
+            <mat-form-field appearance = "outline">
+                <mat-label for="interests">Interests</mat-label>
+                <textarea matInput type="text" class = "required" id="interests" name="interests" placeholder="Possible Interests" formControlName="interests"></textarea>
+            </mat-form-field>
         </div>
 
         <div>
@@ -39,6 +51,8 @@
             <input type="file" name="fileupload" value="fileupload" id="fileupload">
         </div>
 
-        <button  type="submit" [disabled]="!signupForm.valid">Sign Up</button>
+        <button  type="submit" mat-raised-button color= primary [disabled]="!signupForm.valid">Sign Up</button>
     </form>
+   
+        
 </div>
