--- a/src/app/user-login-form/user-login-form.component.html
+++ b/src/app/user-login-form/user-login-form.component.html
@@ -3,23 +3,30 @@
    [formGroup]="loginForm"
    (ngSubmit)="submit()">
 
-      <label>Email:
-      <input type="text" id ="email" placeholder="example@wisc.edu" formControlName="email">
-      <div *ngIf="email.invalid && (email.touched || email.dirty)" class="error">
+     
+      <mat-form-field appearance = "outline">
+          <mat-label>Email</mat-label>
+
+          <input matInput type="text" id ="email" placeholder="example@wisc.edu" formControlName="email">
+        </mat-form-field>
+      <div *ngIf="email.invalid && (email.touched || email.dirty)" class="error"style="color:red">
         Invalid email format
       </div>
 
-       </label><br>
+      <br>
 
-      <label>Password:
-      <input type="password" id="password" required formControlName="password">
+      <mat-form-field appearance = "outline">
+          <mat-label>Password</mat-label>
+          <input matInput type="password" id="password" required formControlName="password">
+
+        </mat-form-field> 
       <!-- <div *ngIf="password.errors.required">
         Password is required
       </div> -->
-       </label><br>
+   <br>
 
-    <button  type="submit" [disabled]="!loginForm.valid">Log In</button>
-
+    <button  type="submit" [disabled]="!loginForm.valid" mat-raised-button color= primary>Log In</button>
+  
   </form>
   <!-- <p>
   Form Status: {{ loginForm.status }}
