--- a/src/app/org-form/org-form.component.html
+++ b/src/app/org-form/org-form.component.html
@@ -3,51 +3,45 @@
   <form
     [formGroup]="orgform"
     (ngSubmit)="submit()">
-
+ <mat-card style="background-color: f2f2f2">
     <div class = "required">
-      
-      <label for="name">Org Name: </label>
-      <input type="text" class="form-group" id="name" required formControlName="name">
+     
+        <mat-form-field appearance = "outline">
+            <mat-label for="name">Organization Name: </mat-label>
+            <input matInput type="text" class="form-group" id="name" required formControlName="name">
+       </mat-form-field>
+     
     </div>
 
     <div class = "required">
-      <label for="location">Address: </label>
-      <input type="text" id="location" required formControlName="location">
+      <mat-form-field appearance = "outline">
+        <mat-label for="location">Address: </mat-label>
+        <input matInput type="text" id="location" required formControlName="location">
+      </mat-form-field>
     </div>
 
     <div class = "required">
-      <label for="zipcode">Zipcode: </label>
-      <input type="text" id="zipcode" required formControlName="zipcode">
+        <mat-form-field appearance = "outline">
+          <mat-label for="zipcode">Zipcode: </mat-label>
+          <input matInput type="text" id="zipcode" required formControlName="zipcode">
+        </mat-form-field>
     </div>
 
     <div class = "optional">
-        <label for="bio">Description/Bio: </label>
-        <textarea rows="4" cols= "95" name="comment" form="usrform" formControlName="bio"></textarea>
+        <mat-form-field appearance = "outline">
+        <mat-label for="bio">Description/Mission Statement: </mat-label>
+        <textarea matInput rows="4" cols= "95" name="comment" form="usrform" formControlName="bio"></textarea>
+        </mat-form-field>
     </div>
 
     <div class = "optional">
         Select images: <input type="file" name="img" multiple>
     </div>
-
-    <div class="example-container">
-      <mat-form-field>
-        <input matInput placeholder="Input">
-      </mat-form-field>
-    
-      <mat-form-field>
-        <textarea matInput placeholder="Textarea"></textarea>
-      </mat-form-field>
-    
-      <mat-form-field>
-        <mat-select placeholder="Select">
-          <mat-option value="option">Option</mat-option>
-        </mat-select>
-      </mat-form-field>
-    </div>
+    <br>
 
     <!----<input type="submit" value="Create Organization">-->
     <button type="submit" mat-raised-button color= primary>Create Organization</button>
-
+ </mat-card>
 
   </form>
 </div>
