--- a/src/app/create-event/create-event.component.html
+++ b/src/app/create-event/create-event.component.html
@@ -3,27 +3,27 @@
     <form
     [formGroup]="signupForm"
     (ngSubmit)="submit()">
-        
+        <h2>Event for {{org.name}}</h2>
         <div class = "form-control">
             <label for="name">Name of Event</label>
             <input type="text" class = "form-group" id="name" name="eventname" placeholder="Event Name" required formControlName="name">
         </div>
-        
+
         <div class = "form-control">
             <label for="date">Date</label>
             <input type="text" class = "form-group" id="date" name="eventdate" placeholder="mm/dd/yyyy" required formControlName="date">
         </div>
-        
+
         <div class = "form-group">
-          <label for="location">Address</label> 
+          <label for="location">Address</label>
           <input type="text" id="location" required formControlName="location">
         </div>
-        
+
         <div class = "form-group">
-          <label for="description">Event Description </label> 
-          <textarea rows="4" cols="50" name="comment" form="usrform" formControlName="description"></textarea> 
+          <label for="description">Event Description </label>
+          <textarea rows="4" cols="50" name="comment" form="usrform" formControlName="description"></textarea>
       </div>
-    
+
         <input type="submit" value="Create Event">
     </form>
 </div>
