--- a/src/app/org/org.component.html
+++ b/src/app/org/org.component.html
@@ -1,3 +1,9 @@
-<p>
-  org works!
-</p>
+<h1>Organization</h1>
+
+<ul class = "orgs">
+  <li *ngFor = "let org of orgs">
+    <a routerLink="/organizations/{{org.id}}">
+      {{org.name}}
+    </a>
+  </li>
+</ul>
