--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -7,3 +7,10 @@
     margin-right: 16px;
     font-size: 17px;
 }
+agm-map {
+    border-radius: 5px;
+    height: 500px;
+    width: 100%;
+    margin: 0 auto;
+    z-index: 1;
+}
