--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,11 +14,10 @@
             <hr/>
           </div>
       </mat-card>
-    </div>
-    <div class="col">
-      <agm-map [latitude]="lat" [longitude]="lng" [zoom] = "zoom">
-        <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
-      </agm-map>
-    </div>
-  </div>
+      <div>
+        <agm-map [latitude]="lat" [longitude]="lng" [zoom] = "zoom">
+          <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
+        
+        </agm-map>
+      </div>
 </div>
