--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,23 +1,41 @@
-<div class="container-fluid">
-  <div class="row">
-    <div class="col">
-      <mat-card style="text-align:left">
-        <mat-form-field style="width: 100%">
-          <input (keyup)="searchEvents($event)" matInput placeholder="Search for volunteer events...">
-        </mat-form-field>
-        <div class="container" *ngFor="let result of results">
-            <hr/>
-            <h5><b>{{ result.event_name }}</b></h5>
-            <p><b>Organization: </b>{{ result.org_id }}</p>
-            <p><b>Description: </b>{{ result.description }}</p>
-            <p><b>Sign Up List: </b>{{ result.signUpList }}</p>
-            <hr/>
-          </div>
-      </mat-card>
+<!-- Load icon library -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<div class="searchBar">
+  <mat-form-field style="width: 70%" >
+    <input (keyup)="searchEvents($event); " matInput placeholder="Search for volunteer events...">
+  </mat-form-field>    
+  <button name = "search" (click)="snav.toggle()" type="submit"><i class="fa fa-search" style="width: 16px; height: 16px;"></i></button>
+  <mat-sidenav-container class="example-sidenav-container" >
+    <mat-sidenav #snav style="width: 35%; background-color: rgba(255, 255, 255, 0.842); " class="event-side">
+      <mat-nav-list>
+        <a mat-list-item routerLink="." *ngFor="let result of results">
+          <img matListAvatar src="https://i.imgur.com/pY7oNOa.png" alt="Voluntrain">
+              <!-- <mat-icon matListIcon>
+                  <li class = "icon"><a routerLink="/"><img src="https://i.imgur.com/pY7oNOa.png" alt="Voluntrain" width="50" height="20"></a></li>
+              </mat-icon> -->
+          <h1 matLine><b style="float: left;">{{ result.event_name }}</b></h1> <br />
+          <p matLine><b style="float: left;">Organization: </b>{{ result.org_id }}</p>
+          <p matLine><b style="float: left;">Description: </b>{{ result.description }}</p>
+        </a>
+      </mat-nav-list>
+    </mat-sidenav>
+    <mat-sidenav-content>
       <div>
         <agm-map [latitude]="lat" [longitude]="lng" [zoom] = "zoom">
-          <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
-        
+         <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>             
         </agm-map>
       </div>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
+</div>
+
+<div *ngIf="!isLoggedIn">
+  <p>No user is currently logged in.</p>
+</div>
+
+<div *ngIf="isLoggedIn">
+  <p>Currently logged in user: {{ name }}</p>
+  <p>Email: {{ email }}</p>
+  <p>Zipcode: {{ zipcode }}</p>
 </div>
