--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,21 +3,22 @@
 
 <div class="searchBar">
   <mat-form-field style="width: 70%" >
-    <input (keyup)="searchEvents($event); " matInput placeholder="Search for volunteer events...">
+    <input (keyup)="searchEvents($event); snav.open();" matInput placeholder="Search for volunteer events...">
   </mat-form-field>    
-  <button name = "search" (click)="snav.toggle()" type="submit"><i class="fa fa-search" style="width: 16px; height: 16px;"></i></button>
   <mat-sidenav-container class="example-sidenav-container" >
     <mat-sidenav #snav style="width: 35%; background-color: rgba(255, 255, 255, 0.842); " class="event-side">
       <mat-nav-list>
-        <a mat-list-item routerLink="." *ngFor="let result of results">
-          <img matListAvatar src="https://i.imgur.com/pY7oNOa.png" alt="Voluntrain">
-              <!-- <mat-icon matListIcon>
-                  <li class = "icon"><a routerLink="/"><img src="https://i.imgur.com/pY7oNOa.png" alt="Voluntrain" width="50" height="20"></a></li>
-              </mat-icon> -->
-          <h1 matLine><b style="float: left;">{{ result.event_name }}</b></h1> <br />
-          <p matLine><b style="float: left;">Organization: </b>{{ result.org_id }}</p>
-          <p matLine><b style="float: left;">Description: </b>{{ result.description }}</p>
-        </a>
+        <span *ngFor="let result of results">
+          <a mat-list-item [routerLink]="['/events-details', result._id]" (click)="snav.toggle()">
+            <img matListAvatar src="https://i.imgur.com/pY7oNOa.png" alt="Voluntrain">
+                <!-- <mat-icon matListIcon>
+                    <li class = "icon"><a routerLink="/"><img src="https://i.imgur.com/pY7oNOa.png" alt="Voluntrain" width="50" height="20"></a></li>
+                </mat-icon> -->
+            <h1 matLine><b style="float: left;">{{ result.event_name }}</b></h1> <br />
+            <p matLine><b style="float: left;">Organization: </b>{{ result.org_id }}</p>
+            <p matLine><b style="float: left;">Description: </b>{{ result.description }}</p>
+          </a>
+        </span>
       </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content>
