--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -1,21 +1,22 @@
 <div>
-  <div class = "username">
-    <label><b>Username:</b> VolunMaster   </label>
-    <i class="fas fa-edit"></i>
+  <div class="username">
+    <label><b>Name:</b> {{user?.name}} </label>
+    <!--<i class="fas fa-edit"></i>-->
   </div>
 
-  <div #description class = "bio">
-    <label><b>Description:</b> About me   </label>
-    <i (click)="testFunction()" class="fas fa-edit"></i>
+  <div #description class="bio">
+    <label><b>Email:</b> {{user?.email}} </label>
+    <!--<i (click)="testFunction()" class="fas fa-edit"></i>-->
   </div>
 
+  <div #zipcode class="zipcode">
+    <label><b>Zipcode:</b> {{user?.zipcode}} </label>
+    <!--<i (click)="testFunction()" class="fas fa-edit"></i>-->
+  </div>
+
+<!--
   <div class = "events" contenteditable="true">
-   <p><b>Events signed up for:</b> <i class="fas fa-edit"></i></p> 
-    <p>1. xkdb</p>
-    <p>2. wer</p>
-    <p>3. woet</p>
-    <p>4. soiy</p>
-                       
+   <p><b>Events signed up for:</b> <i class="fas fa-edit"></i></p>                   
   </div>
-
+-->
 </div>
