--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -25,8 +25,11 @@
       <div>
         <agm-map [latitude]="lat" [longitude]="lng" [zoom] = "zoom">
          <!-- <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>              -->
-         <agm-marker  *ngFor="let data of markers; let i = index" [latitude]="data.lat" [longitude]="data.lng"></agm-marker>
+         <agm-marker  *ngFor="let data of markers; let i = index" [latitude]="data.lat" [longitude]="data.lng" openInfoWindow = "true" iconUrl = "https://i.imgur.com/pY7oNOa.png">
+          <agm-info-window>event_name</agm-info-window>
 
+        </agm-marker>
+        
         </agm-map>
       </div>
     </mat-sidenav-content>
