--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -25,7 +25,7 @@
       <div>
         <agm-map [latitude]="lat" [longitude]="lng" [zoom] = "zoom">
          <!-- <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>              -->
-         <agm-marker  *ngFor="let data of markers; let i = index" [latitude]="data.lat" [longitude]="data.lng" openInfoWindow = "true" iconUrl = "https://i.imgur.com/pY7oNOa.png">
+         <agm-marker  *ngFor="let data of markers; let i = index" [latitude]="data.lat" [longitude]="data.lng" openInfoWindow = "true" >
           <agm-info-window>event_name</agm-info-window>
 
         </agm-marker>
