--- a/src/app/view-event/view-event.component.html
+++ b/src/app/view-event/view-event.component.html
@@ -12,8 +12,8 @@
   <!-- this creates a google map on the page with the given lat/lng from -->
   <!-- the component as the initial center of the map: -->
   <div>
-  <agm-map [latitude]="lat" [longitude]="lng" [zoom] = "zoom">
-    <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
+      <agm-map [latitude]="ulat" [longitude]="ulng" [zoom] = "zoom">
+          <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
   </agm-map>
   </div>
   
