--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -1,5 +1,21 @@
-<h1> Sign Up</h1>
-
+<!--
+<mat-card>
+    <mat-form-field>
+        <input matInput placeholder="Input">
+    </mat-form-field>
+    
+    <mat-form-field>
+        <textarea matInput placeholder="Textarea"></textarea>
+    </mat-form-field>
+    
+    <mat-form-field>
+        <mat-select placeholder="Select">
+            <mat-option value="option">Option</mat-option>
+        </mat-select>
+    </mat-form-field>
+</mat-card>
+-->
+<!--
 <div>
     <form [formGroup]="signUpForm" (ngSubmit)="submit()">
         <div class="form-group">
@@ -19,3 +35,4 @@
         </div>
     </form>
 </div>
+-->
