--- a/src/app/createaccount/createaccount.component.html
+++ b/src/app/createaccount/createaccount.component.html
@@ -1,58 +1,48 @@
-<h1>Create Account</h1>
-<div>
-    <form
-    [formGroup]="signupForm"
-    (ngSubmit)="submit()">
-
-        <div class="required">
-           <mat-form-field appearance = "outline">
-                <mat-label>Name</mat-label>
-                <input matInput type="text" class = "required" id="name" name="name" placeholder="First Name Last Name" required formControlName="name">
-            </mat-form-field>
-        </div>
-
-        <div class="required">
+<div class="container" style="text-align: center">
+    <mat-card>
+        <h2>Create Account</h2>
+        <form [formGroup]="signupForm" (ngSubmit)="submit()">
+            <div class="required">
             <mat-form-field appearance = "outline">
-                <mat-label for="email">Email</mat-label>
-                <input matInput type="text" class = "required" id="email" name="email" placeholder="example@wisc.edu" required formControlName="email">
-            </mat-form-field>
-        </div>
-
-        <div class="required">
-            <mat-form-field appearance = "outline">
-                <mat-label for="password">Password</mat-label>
-                <input matInput type="password" class = "required" id="password" name="password" placeholder="" required formControlName="password">
-            </mat-form-field>
-        </div>
-
-        <div class="required">
-            <mat-form-field appearance = "outline">
-                <mat-label for="zipcode">Zip Code</mat-label>
-                <input matInput type="text" class = "required" id="zipcode" name="zipcode" placeholder="00000" required formControlName="zipcode">
-            </mat-form-field>
-        </div>
-
-        <div class="optional">
-            <mat-form-field appearance = "outline">
-                <mat-label for="description">Description</mat-label>
-                <textarea matInput  rows="4" cols="100" type="text" class = "optional" id="description" name="description" placeholder="Optional description of yourself" formControlName="description"></textarea>
-            </mat-form-field>
-        </div>
-
-        <div class="optional">
-            <mat-form-field appearance = "outline">
-                <mat-label for="interests">Interests</mat-label>
-                <textarea matInput type="text" class = "required" id="interests" name="interests" placeholder="Possible Interests" formControlName="interests"></textarea>
-            </mat-form-field>
-        </div>
-
-        <div>
-            <label for="fileupload"> Select a profile picture to upload</label>
-            <input type="file" name="fileupload" value="fileupload" id="fileupload">
-        </div>
-
-        <button  type="submit" mat-raised-button color= primary [disabled]="!signupForm.valid">Sign Up</button>
-    </form>
-   
-        
+                    <mat-label>Name</mat-label>
+                    <input matInput type="text" class = "required" id="name" name="name" placeholder="First Name Last Name" required formControlName="name">
+                </mat-form-field>
+            </div>
+            <div class="required">
+                <mat-form-field appearance = "outline">
+                    <mat-label for="email">Email</mat-label>
+                    <input matInput type="text" class = "required" id="email" name="email" placeholder="example@wisc.edu" required formControlName="email">
+                </mat-form-field>
+            </div>
+            <div class="required">
+                <mat-form-field appearance = "outline">
+                    <mat-label for="password">Password</mat-label>
+                    <input matInput type="password" class = "required" id="password" name="password" placeholder="" required formControlName="password">
+                </mat-form-field>
+            </div>
+            <div class="required">
+                <mat-form-field appearance = "outline">
+                    <mat-label for="zipcode">Zip Code</mat-label>
+                    <input matInput type="text" class = "required" id="zipcode" name="zipcode" placeholder="00000" required formControlName="zipcode">
+                </mat-form-field>
+            </div>
+            <div class="optional">
+                <mat-form-field appearance = "outline">
+                    <mat-label for="description">Description</mat-label>
+                    <textarea matInput  rows="4" cols="100" type="text" class = "optional" id="description" name="description" placeholder="Optional description of yourself" formControlName="description"></textarea>
+                </mat-form-field>
+            </div>
+            <div class="optional">
+                <mat-form-field appearance = "outline">
+                    <mat-label for="interests">Interests</mat-label>
+                    <textarea matInput type="text" class = "required" id="interests" name="interests" placeholder="Possible Interests" formControlName="interests"></textarea>
+                </mat-form-field>
+            </div>
+            <div>
+                <label for="fileupload"> Select a profile picture to upload</label>
+                <input type="file" name="fileupload" value="fileupload" id="fileupload">
+            </div>
+            <button  type="submit" mat-raised-button color= primary [disabled]="!signupForm.valid">Sign Up</button>
+        </form>
+    </mat-card>
 </div>
