--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,3 +1,20 @@
+.icon {
+    padding: 0 14px;
+}
+
+.spacer {
+    flex: 1 1 auto;
+}
+
+.navbar {
+   margin-bottom: 30px;
+}
+
+.navbar-btn {
+    margin-left: 5px;
+    margin-right: 5px;
+}
+/*
 ul {
     list-style-type: none;
     margin: 0;
@@ -8,7 +25,6 @@ ul {
     top: 0;
     width: 98%;
 }
-
 
 li.pagelink a{
     display: block;
@@ -42,3 +58,4 @@ input[type=text] {
     padding: 14px 16px;
     font-size: 14px
 }
+*/
