--- a/src/app/user-profile/user-profile.component.css
+++ b/src/app/user-profile/user-profile.component.css
@@ -1,3 +1,11 @@
+.profile-box {
+  text-align:left; 
+  background-color: #f2f2f2; 
+  padding-top:10px; 
+  padding-bottom:10px;
+}
+
+/*
 div.events {
     white-space: pre-wrap;
   }
@@ -9,3 +17,4 @@ div {
     width: 70%;
     margin: 0 auto;
 }
+*/
