--- a/src/app/view-event/view-event.component.css
+++ b/src/app/view-event/view-event.component.css
@@ -1,5 +1,16 @@
+agm-map {
+    border-radius: 5px;
+    height: 500px;
+    width: 100%;
+    margin: 0 auto;
+    z-index: 1;
+}
 
-
+.card-avatar {
+    background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
+    background-size: cover;
+  }
+/*
 #testid {display: block;
     color: rgb(12, 1, 1);
     background-color: #f2f2f2;
@@ -96,3 +107,4 @@ h1{
         border-radius: 4px;
         cursor: pointer;
     }
+    */
