--- a/src/app/view-event/view-event.component.html
+++ b/src/app/view-event/view-event.component.html
@@ -1,3 +1,36 @@
+<div class="container" style="text-align:left">
+  <div class="row">
+    <div class="col-md-6">
+      <mat-card>
+          <mat-card-header>
+            <div mat-card-avatar class="card-avatar"></div>
+            <mat-card-title>{{event?.event_name}}</mat-card-title>
+            <mat-card-subtitle>Organized by {{event?.org_id}}</mat-card-subtitle>
+          </mat-card-header>
+          <mat-card-content>
+            <p><b>Description: </b>{{event?.description}}</p>
+            <hr/>
+            <p><b>Volunteers signed up: </b>{{event?.signUpList.length}}</p>
+            <p><b>Volunteers needed: </b>15</p>
+            <hr/>
+          </mat-card-content>
+          <mat-card-actions style="text-align: center">
+            <button (click)="signUp()" mat-raised-button color="primary">Sign Up</button>
+          </mat-card-actions>
+      </mat-card>
+    </div>
+    <div class="col-md-6">
+      <mat-card>
+        <agm-map [latitude]="lat" [longitude]="lng" [zoom] = "zoom">
+          <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
+        </agm-map>
+      </mat-card>
+    </div>
+  </div>
+</div>
+
+
+<!--
 <div class="container" style="">
   <mat-card *ngIf="event">
     <h6>Event: {{ event.event_name }}</h6>
@@ -7,12 +40,7 @@
 </div>
 
 <button class="button" mat-button (click)="dialog.openDialog()">Sign Up</button>
-
-<h6>Event Location</h6>
+-->
+<!--<h6>Event Location</h6>-->
 <!-- this creates a google map on the page with the given lat/lng from -->
 <!-- the component as the initial center of the map: -->
-<div>
-<agm-map [latitude]="lat" [longitude]="lng" [zoom] = "zoom">
-  <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
-</agm-map>
-</div>
