--- a/src/app/user-login-form/user-login-form.component.html
+++ b/src/app/user-login-form/user-login-form.component.html
@@ -1,4 +1,4 @@
-<div class="container" style="text-align:center">
+<div class="container" style="text-align:center; width:40%">
   <mat-card>
     <h2>Login</h2>
     <form [formGroup]="loginForm" (ngSubmit)="submit()">
